<resources>
    <string name="app_name">LocoQuest</string>
    <string name="web_client_id">303169782560-m3sbeeeb9e77tlqsumq9tt1huutuggk0.apps.googleusercontent.com</string>
    <string name="account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="map_fragment">Map Fragment</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="settings_text">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="gps_settings">GPS Settings</string>
    <string name="precise_location">Precise Location</string>
    <string name="approximate_location">Approximate Location</string>
    <string name="request_permissions">Request Permissions</string>
    <string name="profile_text">Profile</string>
    <string name="todo">TODO</string>
    <string name="edit_name">Edit Name</string>
    <string name="completed_benchmarks">Completed Benchmarks</string>
    <string name="def">Default</string>
    <string name="hybrid">Hybrid</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="login">Login</string>
    <string name="sign_out">Sign Out</string>
    <string name="visited_benchmarks">Visited Benchmarks</string>
    <string name="title_activity_ad_mob">AdMobActivity</string>
    <string name="action_settings">Settings</string>


    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->

    <string name="reward_ad_unit_id_test">ca-app-pub-3940256099942544/5224354917</string>
    <string name="radius_booster_reward_ad_unit_id">ca-app-pub-1408914358320849/2332488368</string>
    <string name="extra_coin_reward_ad_unit_id">ca-app-pub-1408914358320849/9250385975</string>

    <string name="title_activity_radius_booster_ad_mob">RadiusBoosterAdMobActivity</string>
    <string name="title_activity_store">StoreActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="get_a_power_up_to_your_reach_and_collect_coins_from_further_away_for_5_minutes">Get a power-up to your reach and collect coins from further away for 5 minutes.</string>
    <string name="radius_boost">Radius Boost</string>
    <string name="equip_radius_boost_now">Equip Radius Boost Now\nCost 2 Coins</string>
    <string name="radius_boost_expires_in_5_00">Radius Boost Expires in 5:00</string>
    <string name="channel_name">Coin</string>
    <string name="channel_description">Coin is collectible</string>
    <string name="get_notifications">Get notifications for this coin</string>
    <string name="remove_notifications">Remove notifications for this coin</string>
    <string name="notify_tooltip">Add or Remove notifications for this coin</string>
    <string name="map_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="benchmark_data_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="coin_collection_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="profile_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="get_started">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
</resources>